<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SleepModeFragment">

    <TextView
        android:id="@+id/tv_clock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:padding="8dp"
        android:fontFamily="@font/rubik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sleep_mode"
        android:textColor="@color/white"
        app:drawableTint="@color/white"
        app:drawableEndCompat="@drawable/ic_more_vert" />

    <TextView
        android:id="@+id/tv_text_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/rubik"
        android:layout_marginHorizontal="16dp"
        android:text="@string/set_a_consi"
        android:textAppearance="@style/set_a_consi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_clock" />

    <TextView
        android:id="@+id/tv_text_second"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/rubik"
        android:gravity="center_horizontal|top"
        android:text="@string/choose_a_re"
        android:textAppearance="@style/choose_a_re"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_first" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_second">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/sleep_time" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#A4C9FE"
        android:fontFamily="@font/rubik"
        android:text="@string/start"
        android:textSize="12sp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:background="@drawable/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>